--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,24 @@
-html {
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+html  {
   font-size: 62.5%;
   box-sizing: border-box;
 }
 
-body, #root {
+body, 
+#root {
   height: 100vh;
   margin: 0;
 }
 
-body, input, select, textarea {
+body, 
+input, 
+select,
+button, 
+textarea {
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
   font-size: 1.6rem;  /* 16px */
-  font-family: Helvetica, Arial, sans-serif;
 }
 
 .grid-container{
@@ -21,6 +29,9 @@ body, input, select, textarea {
   grid-template-rows: 5rem 1fr 5rem;
   grid-template-columns: 1fr;
   height: 100%;
+}
+a {
+  text-decoration: none;
 }
 a:hover {
   color: #ff8000;
@@ -47,4 +58,64 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.content{
+  display: flex;
+  flex-wrap: wrap;
+}
+.main{
+  flex: 3 60rem;
+}
+.sidebar{
+  flex: 1 20rem;
+}
+
+/* styles for products */
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.products li {
+  flex: 0  1 29rem;
+  height: 47rem;
+  padding: 1rem;
+}
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.product img {
+  max-width: 37rem;
+  max-height: 37rem;
+}
+.product-price{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.product-price div,
+.product-price button {
+  text-align: center;
+}
+.product-price div {
+  font-size: 2rem;
+}
+.button{
+  padding: 1rem;
+  border: 1rem #c0c0c0 sloid;
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+.button.hover{
+ border: #808080;
+}
+.button.primary{
+   background-color: #f0c040;
 }
