--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ footer {
   height: 47rem;
   padding: 1rem;
 }
-.product{
+.product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -95,7 +95,7 @@ footer {
   max-width: 37rem;
   max-height: 37rem;
 }
-.product-price{
+.product-price {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -107,15 +107,33 @@ footer {
 .product-price div {
   font-size: 2rem;
 }
-.button{
+.button {
   padding: 1rem;
   border: 1rem #c0c0c0 sloid;
   background-color: #f0f0f0;
   cursor: pointer;
 }
-.button.hover{
+
+.button.hover {
  border: #808080;
 }
-.button.primary{
+.button.primary {
    background-color: #f0c040;
+}
+
+/* styles for Filter parent  */
+.filter {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 1rem;
+  border-bottom: 0.1rem #c0c0c0 solid;
+
+}
+
+/* styles for Filter children  - 3 same and equal size*/
+.filter div {
+  flex: 1;
+  
+
 }
