--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ footer {
   cursor: pointer;
 }
 
-.button.hover {
+.button:hover {
  border: #808080;
 }
 .button.primary {
@@ -134,6 +134,47 @@ footer {
 /* styles for Filter children  - 3 same and equal size*/
 .filter div {
   flex: 1;
-  
+}
 
+/* Index.css  */
+.cart{
+  padding: 1rem;
+  margin: 1rem;
+  display: flex;
+}
+.cart-header{
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+.cart-items {
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+}
+.cart-items img {
+  width: 5rem;
+}
+.cart-items li{
+ display: flex;
+}
+.cart-items li div{
+  padding: .5rem;
+}
+.cart-items li div:last-child{
+ flex: 1;
+}
+.right{
+  text-align:right;
+}
+.total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.total > div {
+  font-size: 2rem;
+}
+.total > div,
+.total > button {
+  flex: 1;
 }
